--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,19 @@
 -r requirements/optional.txt
 -r requirements/runtime.txt
 -r requirements/tests.txt
+
+mmdet~=2.28.2
+opencv-python~=4.6.0.66
+torch~=1.10.1+cu113
+imageio~=2.22.4
+torchvision~=0.11.2+cu113
+typing~=3.7.4.3
+Pillow~=9.3.0
+requests~=2.23.0
+fire~=0.5.0
+jsonschema~=4.17.0
+sahi~=0.11.12
+tqdm~=4.63.0
+setuptools~=61.2.0
+PyYAML~=6.0
+xlrd~=2.0.1
